
ChangeLog
 [ + added, - removed, * changed ]
 + 03Ago2021 Reads PC on RISC-V architecture to add support for time sampling
 * 06Jul2021 Adds L3 store misses offcore counter PEBS sampling (closes #62)
 * 06Jul2021 Adds new option ([-no]-translate-data-addresses) to mpi2prv (closes #61)
 * 06Jul2021 Fixes calloc() behaviour (closes #60)
 * 06Jul2021 Fixes realloc comment in mpi2prv (closes #59)
 * 06Jul2021 Fix for missing symbols of libraries loaded dynamically (closes #58) 
 + 27May2021 Adds support for MPI_Dist_graph_create_adjacent and fixes bug in xtr_MPI_Comm_neighbors_count parameters 
 * 26Jan2021 Checks if EXTRAE_PY_CEVENTS is not empty before checking its value
 + 29Sep2020 Adds configure option to disable instrumentation of pthread_cond_* calls
 * 21Ago2020 Fixes bug instrumenting user code inside OpenMP
 * 19Ago2020 Fixes wrong exit event in cudaFree and cudaMemset
 * 12Ago2020 Modifications to support CUDA10
 + 14Jul2020 Adds missing wrappers/CUPTI and a catch-all for CUPTI uninstrumented routines
 + 03Jul2020 Adds Makefile.extrae_module to distribution to compile extrae_module.f90
 + 29Jun2020 Adds instrumentation for close and fclose IO calls
 * 25Jun2020 Changes call to MPI_Barrier into PMPI_Barrier
 * 23Jun2020 Fixes wrong JAVAH definition and conditional check
 * 23Jun2020 Fixes for dyninst make check tests and configure checks for libsynapse
 * 23Jun2020 Forces exit on second termination signal
 * 22Jun2020 Changes to use new binutils >= 2.34 API
 * 22Jun2020 Changes merger block distribution to avoid processes with 0 traces
 * 22Jun2020 Fixes checks for `javah` to compile Extrae with JDK > 9
 * 19Jun2020 Updates common.h to meet C++11 syntax
 * 12Jun2020 Solves duplicate capture of C and Fortran MPI calls when using Intel implementations
 * 08Jun2020 Fixes finalization issues when Extrae is initialized by API and another runtime
 * 26May2020 Adds option to instrument I/O internals