@@ -247,6 +247,11 @@ int tracejant_rusage = FALSE;
 /** Store information about malloc?                                     **/
 int tracejant_memusage = FALSE;
 
+#if defined(SAMPLING_SUPPORT)
+/** Is time-based sampling enabled?                                     **/
+int xtr_sampling_enabled = FALSE;
+#endif
+
 
 /**** Variable global que controla quin subset de les tasks generen o ****/
 /**** no generen trasa ***************************************************/
@@ -1379,19 +1384,22 @@ static int Allocate_buffer_and_file (int thread_id, int forked)
 	}
 
 #if defined(SAMPLING_SUPPORT)
-	FileName_PTT(tmp_file, Get_TemporalDir(initialTASKID), appl_name,
-	  hostname, getpid(), initialTASKID, thread_id, EXT_TMP_SAMPLE);
-
-	if (forked)
-		Buffer_Free (SamplingBuffer[thread_id]);
-
-	SamplingBuffer[thread_id] = new_Buffer (buffer_size, tmp_file, FALSE);
-	if (SamplingBuffer[thread_id] == NULL)
+	if (TRACING_SAMPLING)
 	{
-		fprintf (stderr, PACKAGE_NAME": Error allocating sampling buffer for thread %d\n", thread_id);
-		return 0;
+		FileName_PTT(tmp_file, Get_TemporalDir(initialTASKID), appl_name,
+		  hostname, getpid(), initialTASKID, thread_id, EXT_TMP_SAMPLE);
+
+		if (forked)
+			Buffer_Free (SamplingBuffer[thread_id]);
+
+		SamplingBuffer[thread_id] = new_Buffer (buffer_size, tmp_file, FALSE);
+		if (SamplingBuffer[thread_id] == NULL)
+		{
+			fprintf (stderr, PACKAGE_NAME": Error allocating sampling buffer for thread %d\n", thread_id);
+			return 0;
+		}
+		Buffer_SetFlushCallback (SamplingBuffer[thread_id], NULL);
 	}
-	Buffer_SetFlushCallback (SamplingBuffer[thread_id], NULL);
 #endif
 
 	return 1;
@@ -1431,7 +1439,10 @@ static int Allocate_buffers_and_files (int world_size, int num_threads, int fork
 		xmalloc(LastCPUEmissionTime, num_threads * sizeof(iotimer_t));
 		xmalloc(LastCPUEvent, num_threads * sizeof(int));
 #if defined(SAMPLING_SUPPORT)
-		xmalloc(SamplingBuffer, num_threads * sizeof(Buffer_t *));
+		if (TRACING_SAMPLING)
+		{
+			xmalloc(SamplingBuffer, num_threads * sizeof(Buffer_t *));
+		}
 #endif
 	}
 
@@ -1454,7 +1465,10 @@ static int Reallocate_buffers_and_files (int new_num_threads)
 	xrealloc(LastCPUEmissionTime, LastCPUEmissionTime, new_num_threads * sizeof(iotimer_t));
 	xrealloc(LastCPUEvent, LastCPUEvent, new_num_threads * sizeof(int));
 #if defined(SAMPLING_SUPPORT)
-	xrealloc(SamplingBuffer, SamplingBuffer, new_num_threads * sizeof(Buffer_t *));
+	if (TRACING_SAMPLING)
+	{
+		xrealloc(SamplingBuffer, SamplingBuffer, new_num_threads * sizeof(Buffer_t *));
+	}
 #endif
 
 	for (i = get_maximum_NumOfThreads(); i < new_num_threads; i++)
@@ -2276,7 +2290,8 @@ static void Backend_Finalize_close_mpits (pid_t pid, int thread, int append)
 #if defined(SAMPLING_SUPPORT)
 	FileName_PTT(tmp_name, Get_TemporalDir(initialTASKID), appl_name, hostname,
 	  pid, initialTASKID, thread, EXT_TMP_SAMPLE);
-	if (Buffer_GetFillCount(SAMPLING_BUFFER(thread)) > 0) 
+	if (SamplingBuffer != NULL && SAMPLING_BUFFER(thread) != NULL &&
+	  Buffer_GetFillCount(SAMPLING_BUFFER(thread)) > 0) 
 	{
 		Buffer_Flush(SAMPLING_BUFFER(thread));
 		Buffer_Close(SAMPLING_BUFFER(thread));
@@ -2530,7 +2545,8 @@ void Backend_Finalize (void)
 					TRACING_BUFFER(thread) = NULL;
 				}
 #if defined(SAMPLING_SUPPORT)
-				if (SAMPLING_BUFFER(thread) != NULL)
+				if (SamplingBuffer != NULL &&
+				  SAMPLING_BUFFER(thread) != NULL)
 				{
 					Buffer_Free (SAMPLING_BUFFER(thread));
 					SAMPLING_BUFFER(thread) = NULL;
@@ -2542,7 +2558,10 @@ void Backend_Finalize (void)
 			xfree(LastCPUEvent);
 			xfree(TracingBuffer);
 #if defined(SAMPLING_SUPPORT)
-			xfree(SamplingBuffer);
+			if (SamplingBuffer != NULL)
+			{
+				xfree(SamplingBuffer);
+			}
 #endif
 			xfree (TracingBitmap);
 			Extrae_allocate_thread_CleanUp();
@@ -2667,7 +2686,8 @@ void Backend_Enter_Instrumentation ()
 	/* Check if we have to fill the sampling buffer */
 #if defined(SAMPLING_SUPPORT)
 	if (Extrae_get_DumpBuffersAtInstrumentation())
-		if (Buffer_IsFull (SAMPLING_BUFFER(THREADID)))
+		if (SamplingBuffer != NULL && SAMPLING_BUFFER(THREADID) != NULL &&
+		  Buffer_IsFull (SAMPLING_BUFFER(THREADID)))
 		{
 			event_t FlushEv_Begin, FlushEv_End;
 
